main.tf
resource "aws_security_group" "web_sg" {
  name        = "web-sg"
  description = "Allow SSH and HTTP"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "server1" {
  ami           = "ami-0b9f50ee4cf81e8d8"
  instance_type = "t3.micro"
  key_name      = "ssh-cle1"

  vpc_security_group_ids = [aws_security_group.web_sg.id]

  user_data = file("apache.sh")

  tags = {
    Name = "JacksBlogExample"
    Team = "devops"
    env  = "dev"
  }
}
